# ouro

./: .env.example  .gitignore  CLAUDE.md  README.md  dev.sh  docker-compose.override.yml  docker-compose.yml  doppler.yaml
.github/workflows/: deploy.yml  publish-mcp.yml
.mcp/: server.json
agent/: Dockerfile  pyproject.toml
agent/src/: config.py  main.py
agent/src/agent/: classifier.py  dockerfile.py  event_bus.py  loop.py  oracle.py  processor.py  webhooks.py
agent/src/api/: pricing.py  routes.py
agent/src/chain/: abi.py  client.py  erc8004.py  erc8021.py
agent/src/db/: migrate.py  models.py  operations.py  session.py
agent/src/slurm/: client.py  scaler.py
agent/tests/: conftest.py  test_auth.py  test_classifier.py  test_dockerfile.py  test_erc8021.py  test_event_bus.py  test_event_persistence.py  test_operations.py  test_oracle.py  test_pricing.py  test_processor.py  test_routes.py  test_routes_dockerfile_validation.py  test_scaler.py  test_storage.py  test_submit_preflight.py  test_webhooks.py  test_workspace.py
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: ProofOfCompute.sol
contracts/test/: ProofOfCompute.t.sol
dashboard/: DESIGN.md  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: AttributionPanel.tsx  AuditPanel.tsx  (+18 more)
db/: 01-init.sql  02-seed.sql
db/migrations/: 002-remove-proofs.sql
deploy/: build-golden-image.sh  cloud-run.yaml  deploy-agent.sh  deploy-all.sh  deploy.sh  setup-elastic-infra.sh  setup-slurm-cluster.sh  slurm.sh
deploy/slurm/: cgroup.conf  docker-cleanup.sh  node-shutdown.sh  node-startup.sh  slurm.conf  slurm_proxy.py
docs/: agent-internals.md  api-reference.md  architecture.md  operations.md
mcp/: CLAUDE.md  README.md  package-lock.json  package.json
mcp-server/: Dockerfile  README.md  pyproject.toml  test_e2e.py
mcp-server/src/ouro_mcp/: server.py  x402_signer.py
mcp/src/: index.ts
ouro-sdk/: README.md  pyproject.toml
tasks/: lessons.md  todo.md
(+70 files in other folders)
