[project]
name = "ouro-agent"
version = "0.1.0"
description = "Ouro Proof-of-Compute Oracle — autonomous HPC agent on Base"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "pydantic-ai",
    "pydantic-settings",
    "x402[fastapi,evm,httpx]",
    "web3>=7.0.0",
    "eth-account",
    "httpx",
    "asyncpg",
    "sqlalchemy[asyncio]>=2.0",
    "psycopg2-binary",
    "cdp-sdk",
]

[project.optional-dependencies]
scaling = ["google-cloud-compute>=1.19.0"]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
